package ar.edu.utn.frba.dds.model.entities;

import lombok.Data;

@Data
public class Categoria {
  private Long id;
  private String nombre;
}
